Update CheckStyle configuration, fix violations
- Rewrote CheckStyle suppressions file so the configured suppressions actually work.
- Fixed some style violations.
- Added missing unit test for FastFieldCopier.